Fix post view on mobile

--- a/notes/style.css
+++ b/notes/style.css
@@ -201,12 +201,8 @@ header .container {
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    .container {
-        padding: 0;
-    }
-
     .fp-section {
-        margin: 0;
+        margin: 0 -15px;
         padding: 1rem;
     }
 
